--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "localtunnel": "lt --port 3000 --subdomain coco",
     "share": "npm-run-all --parallel open:src localtunnel",
     "lint": "esw webpack.config.* src buildScripts --color",
-    "lint:watch": "npm run lint -- --watch"
+    "lint:watch": "npm run lint -- --watch",
+    "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\""
   },
   "author": "Jorge Santa Cruz Portocarrero",
   "dependencies": {
